package at.fhtw.swen2.tutorial.presentation;

import at.fhtw.swen2.tutorial.service.dto.Tour;

public interface TourSelectionListener {

    void tourSelected(Tour tour);

}
